apps/keycloak/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  parentRefs:
    - name: nginx
      namespace: nginx-gateway
  hostnames:
    - keycloak.thecluster.lan
    - auth.thecluster.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak-http
          port: 80
