apps/keycloak/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: auth.thecluster.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: keycloak-http
                port:
                  number: 80
