apps/keycloak/internal-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: thecluster.io
    external-dns.alpha.kubernetes.io/hostname: keycloak.lan.thecluster.io,auth.lan.thecluster.io,idp.lan.thecluster.io,identity.lan.thecluster.io,kc.lan.thecluster.io
spec:
  ingressClassName: haproxy
  rules:
    - host: keycloak.lan.thecluster.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  name: http
    - host: auth.lan.thecluster.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  name: http
    - host: idp.lan.thecluster.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  name: http
    - host: identity.lan.thecluster.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  name: http
    - host: kc.lan.thecluster.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  name: http
  tls:
    - secretName: keycloak-internal-tls
      hosts:
        - keycloak.lan.thecluster.io
        - auth.lan.thecluster.io
        - idp.lan.thecluster.io
        - identity.lan.thecluster.io
        - kc.lan.thecluster.io
